# library.cyg.us

./: .gitignore  Makefile  README.md  netlify.toml
metadata_updater/: Gemfile
metadata_updater/spec/: metadata_spec.rb
metadata_updater/src/: db_create.rb  images_downloader.rb  metadata.rb  metadata_updater.rb  run.rb
post_template/: Cargo.toml  README.md
post_template/src/: app_state.rs  book.rs  book_metadata.rs  download_images.rs  main.rs  openlibrary.rs  sqlite.rs  stateful_list.rs  template_generator.rs  ui.rs  update_file_metadata.rs
post_template/src/ui/: app_state.rs
site/: index.js  index.md  style.css
site/books/: aprendiendo-a-aprender-learning-to-learn.md  aprendiendo-a-aprender.md  drive.md  good-strategy-bad-strategy.md  hooked.md  performance-appraisal-tool-kit.md  range.md  the-lord-of-the-rings.md  the-prince.md  thinking-fast-and-slow.md
site/metadata/: books.sqlite
site/templates/: index.html  template-book.html  template.html
