[package]
name = "post_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.22.1"

reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
