[package]
name = "post_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.22.1"

clap = { version = "3.0.5", features = ["derive"] }

reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"

yaml-front-matter = "0.1.0"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

tinytemplate = "1.2.1"

slug = "0.1.4"

chrono = { version ="0.4.19" , features = ["serde"] }

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]